Fix generation of minbfw4 database data, where we need |restiny_t| = 32bit common.conf: add some functions to trim the console output (e.g. AHEAD_run_hidden_output() allows to only print the output when there was an error) CMakeLists.txt (all): tabs instead of spaces paper: remove some commented text, add some empty lines, rename input file name for scalarVSvector experiment (just rename, because it's referred to in this order everywhere)
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
 
 IF(POLICY CMP0048)
-    CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(AHEAD VERSION 0.9 LANGUAGES CXX)
+	CMAKE_POLICY(SET CMP0048 NEW)
+	PROJECT(AHEAD VERSION 0.9 LANGUAGES CXX)
 ELSE()
-    PROJECT(AHEAD LANGUAGES CXX)
+	PROJECT(AHEAD LANGUAGES CXX)
 ENDIF()
 
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
@@ -45,4 +45,5 @@ ADD_SUBDIRECTORY(lib)
 ADD_SUBDIRECTORY(tools)
 
 SET(RESTINY32 ON)
+ADD_SUBDIRECTORY(lib lib_restiny32)
 ADD_SUBDIRECTORY(tools tools_restiny32)
