--- a/common.conf
+++ b/common.conf
@@ -37,6 +37,9 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_MINBFW_MAX="3"
 	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
 
+	# WARNING: If you want to change the following, make sure to change the respective accurrences throughout this project, e.g. in the CMakeLists.txt files
+	export AHEAD_RESTINY32_SUFFIX="_restiny32"
+
 	export AHEAD_PAPER_PATH="${SOURCE_DIR}/paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
@@ -49,11 +52,64 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_BOOTSTRAP="${SOURCE_DIR}/build_bootstrap.sh"
 	export AHEAD_SCRIPT_BLDSRC="${SOURCE_DIR}/build_sources.sh"
 	export AHEAD_SCRIPT_GENSSB="${SOURCE_DIR}/generate_ssbdata.sh"
-	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="${AHEAD_BUILD_RELEASE_DIR}/ssbm-dbsize_scalar"
+	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="ssbm-dbsize_scalar"
+	export AHEAD_SCRIPT_GENSSB_EXECUTABLE_PATH="${AHEAD_BUILD_RELEASE_DIR}/${AHEAD_SCRIPT_GENSSB_EXECUTABLE}"
 	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR}/coding_benchmark.sh"
 	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR}/modular_inverse.sh"
 	export AHEAD_SCRIPT_TURBOBOOST="${SOURCE_DIR}/turboboost.sh"
 	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR}/scalinggovernor.sh"
+
+	######################################################
+	# Function to print something and exit.              #
+	# Expects the return code as FIRST argument!         #
+	######################################################
+	AHEAD_exit () {
+		ret=$1
+		shift
+		echo "$@"
+		exit $ret
+	}
+
+	######################################################
+	# When SYNCing file in a VM, we get nasty problems,  #
+	# so we add some SLEEPing when inside a VM. This     #
+	# fixed the issue for us.                            #
+	######################################################
+	AHEAD_sync () {
+		if ((AHEAD_IS_VM == 1)); then
+			echo -n "   * SYNCing files (VM mode)..." && sleep 2 && sync && sleep 2 && echo " Done."
+		else
+			echo -n "   * SYNCing files..." && sync && echo " Done."
+		fi
+	}
+	export -f AHEAD_sync
+
+	######################################################
+	# Function to capture the output in a temporary file #
+	# and print the contents only upon an error.         #
+	# The function assumes, that some "echo -n" output   #
+	# was previously issued and that we can end the line #
+	# with an "echo Error" or "echo Done".               #
+	######################################################
+	AHEAD_run_hidden_output () {
+		(($# == 0)) && echo " Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
+		t=$(tempfile) || exit 1
+		trap "echo ' Error!'; cat '$t'; rm -f -- '$t'" EXIT
+		CMD="$1"
+		shift
+		"${CMD}" "$@" &>"$t"
+		ret=$?
+		if ((ret==0)); then
+			echo " Done."
+		else
+			echo ' Error!'
+			cat "$t"
+		fi
+		rm -f -- "$t"
+		trap - EXIT
+		return $ret
+	}
+	export -f AHEAD_run_hidden_output
 
 	######################################################
 	# The following helper functions calls               #
