--- a/eval/run.conf
+++ b/eval/run.conf
@@ -23,16 +23,22 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	[[ -z ${EXEC_ENV+x} ]] && export EXEC_ENV="$(which env)"
 	[[ -z ${EXEC_BASH+x} ]] && export EXEC_BASH="$(which bash)"
 
+	# ATTENTION !!! If you change the following names, then you MUST change the file names in "/paper/06-end2end-eval.tex" as well !!!
+	[[ -z ${PATH_SCLAR_VS_VECTOR_BASENAME+x} ]] && export PATH_SCLAR_VS_VECTOR_BASENAME="scalarVSvector"
+	[[ -z ${PATH_SCLAR_VS_VECTOR_GNUPLOTFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.m"
+	[[ -z ${PATH_SCLAR_VS_VECTOR_DATAFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.data"
+	[[ -z ${PATH_SCLAR_VS_VECTOR_PLOTFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.tex"
+
 	# ATTENTION !!! If you change the following names, then you MUST change the file names in "/paper/01-introduction.tex" as well !!!
-	export PATH_TEASER_RUNTIME_BASENAME="teaser_runtime"
-	export PATH_TEASER_RUNTIME_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.m"
-	export PATH_TEASER_RUNTIME_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.data"
-	export PATH_TEASER_RUNTIME_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.tex"
-	export PATH_TEASER_CONSUMPTION_BASENAME="teaser_consumption"
-	export PATH_TEASER_CONSUMPTION_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.m"
-	export PATH_TEASER_CONSUMPTION_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.data"
-	export PATH_TEASER_CONSUMPTION_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.tex"
-	export PATH_TEASER_LEGEND_BASENAME="teaser_legend"
-	export PATH_TEASER_LEGEND_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.m"
-	export PATH_TEASER_LEGEND_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.tex"
+	[[ -z ${PATH_TEASER_RUNTIME_BASENAME+x} ]] && export PATH_TEASER_RUNTIME_BASENAME="teaser_runtime"
+	[[ -z ${PATH_TEASER_RUNTIME_GNUPLOTFILE+x} ]] && export PATH_TEASER_RUNTIME_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.m"
+	[[ -z ${PATH_TEASER_RUNTIME_DATAFILE+x} ]] && export PATH_TEASER_RUNTIME_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.data"
+	[[ -z ${PATH_TEASER_RUNTIME_PLOTFILE+x} ]] && export PATH_TEASER_RUNTIME_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.tex"
+	[[ -z ${PATH_TEASER_CONSUMPTION_BASENAME+x} ]] && export PATH_TEASER_CONSUMPTION_BASENAME="teaser_consumption"
+	[[ -z ${PATH_TEASER_CONSUMPTION_GNUPLOTFILE+x} ]] && export PATH_TEASER_CONSUMPTION_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.m"
+	[[ -z ${PATH_TEASER_CONSUMPTION_DATAFILE+x} ]] && export PATH_TEASER_CONSUMPTION_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.data"
+	[[ -z ${PATH_TEASER_CONSUMPTION_PLOTFILE+x} ]] && export PATH_TEASER_CONSUMPTION_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.tex"
+	[[ -z ${PATH_TEASER_LEGEND_BASENAME+x} ]] && export PATH_TEASER_LEGEND_BASENAME="teaser_legend"
+	[[ -z ${PATH_TEASER_LEGEND_GNUPLOTFILE+x} ]] && export PATH_TEASER_LEGEND_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.m"
+	[[ -z ${PATH_TEASER_LEGEND_PLOTFILE+x} ]] && export PATH_TEASER_LEGEND_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.tex"
 fi
