--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,14 +15,14 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
 
 IF("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
-    MESSAGE(FATAL_ERROR "You must run cmake on the root diretory!")
+	MESSAGE(FATAL_ERROR "You must run cmake on the root diretory!")
 ENDIF()
 
 IF(POLICY CMP0048)
-    CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(SSBQueries VERSION 0.9 LANGUAGES CXX)
+	CMAKE_POLICY(SET CMP0048 NEW)
+	PROJECT(SSBQueries VERSION 0.9 LANGUAGES CXX)
 ELSE()
-    PROJECT(SSBQueries LANGUAGES CXX)
+	PROJECT(SSBQueries LANGUAGES CXX)
 ENDIF()
 
 IF(DEFINED RESTINY32)
@@ -69,21 +69,27 @@ ENDIF(LIBPCM)
 ##########################
 ### SSB Shared Library ###
 ##########################
+SET(LIBAHEAD "AHEAD")
+STRING(APPEND LIBAHEAD "${EXEC_SUFFIX}")
+
 MACRO( add_shared_lib target_name arg_source_files )
-    SET(LIBNAME "${target_name}")
-    STRING(APPEND LIBNAME "${EXEC_SUFFIX}")
-    MESSAGE(STATUS "Add shared library ${LIBNAME}")
-    STRING(REPLACE " " ";" SOURCE_FILES "${arg_source_files}")
-    ADD_LIBRARY(${LIBNAME} SHARED ${SOURCE_FILES})
-    SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 17)
-    SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
-    TARGET_INCLUDE_DIRECTORIES(${LIBNAME} PUBLIC "${PCMDIR}")
-    IF(LIBPCM)
-        TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD "${LIBPCM}" ffi dl pthread curses boost_system boost_filesystem)
-        TARGET_COMPILE_DEFINITIONS(${LIBNAME} PUBLIC "AHEAD_PCM")
-    ELSE(LIBPCM)
-        TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD ffi dl pthread curses boost_system boost_filesystem)
-    ENDIF(LIBPCM)
+	SET(LIBNAME "${target_name}")
+	STRING(APPEND LIBNAME "${EXEC_SUFFIX}")
+	MESSAGE(STATUS "Add shared library ${LIBNAME}")
+	STRING(REPLACE " " ";" SOURCE_FILES "${arg_source_files}")
+	ADD_LIBRARY(${LIBNAME} SHARED ${SOURCE_FILES})
+	SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 17)
+	SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+	TARGET_INCLUDE_DIRECTORIES(${LIBNAME} PUBLIC "${PCMDIR}")
+	IF(LIBPCM)
+		TARGET_LINK_LIBRARIES(${LIBNAME} "${LIBAHEAD}" "${LIBPCM}" ffi dl pthread curses boost_system boost_filesystem)
+		TARGET_COMPILE_OPTIONS(${LIBNAME} PUBLIC "-DAHEAD_PCM")
+	ELSE(LIBPCM)
+		TARGET_LINK_LIBRARIES(${LIBNAME} "${LIBAHEAD}" ffi dl pthread curses boost_system boost_filesystem)
+	ENDIF(LIBPCM)
+	IF(DEFINED RESTINY32)
+		TARGET_COMPILE_OPTIONS(${LIBNAME} PUBLIC "-DRESTINY32")
+	ENDIF()
 ENDMACRO( add_shared_lib )
 add_shared_lib(SSB "ssbm/ssb.cpp")
 
@@ -92,22 +98,24 @@ add_shared_lib(SSB "ssbm/ssb.cpp")
 ######################
 
 MACRO( add_algorithm arg_name arg_path target_name )
-    MESSAGE(STATUS "Add executable ${target_name}")
-    FILE(GLOB SOURCE_FILES
-        "${arg_path}/${arg_name}.cpp")
-    ADD_EXECUTABLE(${target_name} ${SOURCE_FILES})
-    SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD 17)
-    SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD_REQUIRED ON)
+	MESSAGE(STATUS "Add executable ${target_name}")
+	FILE(GLOB SOURCE_FILES
+		"${arg_path}/${arg_name}.cpp")
+	ADD_EXECUTABLE(${target_name} ${SOURCE_FILES})
+	SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD 17)
+	SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD_REQUIRED ON)
+	SET(LIBSSB "SSB")
+	STRING(APPEND LIBSSB "${EXEC_SUFFIX}")
 	TARGET_INCLUDE_DIRECTORIES(${target_name} PUBLIC "${PCMDIR}")
-    IF(LIBPCM)
-        TARGET_LINK_LIBRARIES(${target_name} ${LIBPCM} AHEAD SSB)
-        TARGET_COMPILE_DEFINITIONS(${LIBNAME} PUBLIC "AHEAD_PCM")
-    ELSE(LIBPCM)
-        TARGET_LINK_LIBRARIES(${target_name} AHEAD SSB)
-    ENDIF(LIBPCM)
-    IF(DEFINED RESTINY32)
-    	TARGET_COMPILE_DEFINITIONS(${target_name} PUBLIC "RESTINY32")
-    ENDIF(DEFINED RESTINY32)
+	IF(LIBPCM)
+		TARGET_LINK_LIBRARIES(${target_name} ${LIBPCM} "${LIBAHEAD}" "${LIBSSB}")
+		TARGET_COMPILE_OPTIONS(${LIBNAME} PUBLIC "-DAHEAD_PCM")
+	ELSE()
+		TARGET_LINK_LIBRARIES(${target_name} "${LIBAHEAD}" "${LIBSSB}")
+	ENDIF()
+	IF(DEFINED RESTINY32)
+		TARGET_COMPILE_OPTIONS(${target_name} PUBLIC "-DRESTINY32")
+	ENDIF()
 ENDMACRO( add_algorithm )
 
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
@@ -115,24 +123,24 @@ MESSAGE(STATUS "link directory: ${LIBRARY_OUTPUT_PATH}")
 
 MACRO(add_ssb_Scalar arg_queries)
 	SET(QUERIES "")
-    STRING(REPLACE " " ";" QUERIES "${arg_queries}")
-    FOREACH(Q ${QUERIES})
-    	SET(EXEC_NAME "${Q}_scalar")
-    	STRING(APPEND EXEC_NAME "${EXEC_SUFFIX}")
-        add_algorithm(${Q} "ssbm" "${EXEC_NAME}")
-        TARGET_COMPILE_OPTIONS("${EXEC_NAME}" PUBLIC "-fno-tree-vectorize")
-    ENDFOREACH(Q QUERIES)
+	STRING(REPLACE " " ";" QUERIES "${arg_queries}")
+	FOREACH(Q ${QUERIES})
+		SET(EXEC_NAME "${Q}_scalar")
+		STRING(APPEND EXEC_NAME "${EXEC_SUFFIX}")
+		add_algorithm(${Q} "ssbm" "${EXEC_NAME}")
+		TARGET_COMPILE_OPTIONS("${EXEC_NAME}" PUBLIC "-fno-tree-vectorize")
+	ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssb_Scalar)
 
 MACRO(add_ssb_SSE arg_queries)
 	SET(QUERIES "")
-    STRING(REPLACE " " ";" QUERIES "${arg_queries}")
-    FOREACH(Q ${QUERIES})
-    	SET(EXEC_NAME "${Q}_SSE")
-    	STRING(APPEND EXEC_NAME "${EXEC_SUFFIX}")
-        add_algorithm(${Q} "ssbm" "${EXEC_NAME}")
-        TARGET_COMPILE_DEFINITIONS("${EXEC_NAME}" PUBLIC "FORCE_SSE")
-    ENDFOREACH(Q QUERIES)
+	STRING(REPLACE " " ";" QUERIES "${arg_queries}")
+	FOREACH(Q ${QUERIES})
+		SET(EXEC_NAME "${Q}_SSE")
+		STRING(APPEND EXEC_NAME "${EXEC_SUFFIX}")
+		add_algorithm(${Q} "ssbm" "${EXEC_NAME}")
+		TARGET_COMPILE_OPTIONS("${EXEC_NAME}" PUBLIC "-DFORCE_SSE")
+	ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssb_SSE)
 
 # If you want to be able to test the restiny_t=32bit behavior for *all* queries, simply remove the if-branch, so that all queries will be generated a second time with the larger data type!
