fixes to teaser finish scalar vs vector allow verbose output when "VERBOSE" variable is set (e.g. by calling "VERBOSE=1 ./reproduce_SIGMOD2018.sh")
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -1,9 +1,9 @@
 # this config file contains some common settings for the AHEAD benchmarking, used by several scripts
 
 if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
-	echo "sourcing common.conf"
 	export AHEAD_COMMON_CONF=""
 	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Sourcing '${SOURCE_DIR}/common.conf'"
 
 	######################################################
 	# The following are settings for the modular inverse #
@@ -14,11 +14,15 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# The following are settings for executing AHEAD     #
 	######################################################
 	[[ -z ${AHEAD_DATE+x} ]] && export AHEAD_DATE="$(date '+%Y-%m-%d_%H-%M')"
-	if [[ $(which systemd-detect-virt &>/dev/null) ]]; then
-		[[ systemd-detect-virt ]] && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
+	if which systemd-detect-virt &>/dev/null ; then
+		systemd-detect-virt &>/dev/null && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
+	elif which dmesg &>/dev/null; then
+		dmesg | grep -q "Hypervisor detected" && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
 	else
-		[[ $(dmesg | grep "Hypervisor detected") ]] && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
+		# fallback variant -- just assume VM...
+		AHEAD_IS_VM=1
 	fi
+	((AHEAD_IS_VM == 1)) && echo " * detected VM"
 	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR}/date.prev"
 	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
@@ -31,13 +35,19 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
 	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
 
+	export AHEAD_SCALAR_VS_VECTOR_SCALEFACTOR=1
+	export AHEAD_SCALAR_VS_VECTOR_QUERIES="(11 12 13)"
+	export AHEAD_SCALAR_VS_VECTOR_VARIANT_INDICES="(0 4)"
+	export AHEAD_SCALAR_VS_VECTOR_YMIN=0
+	export AHEAD_SCALAR_VS_VECTOR_YMAX=3
+
 	export AHEAD_MINBFW_SUFFIX="-minbfw"
 	export AHEAD_MINBFW_SCALEFACTOR="1"
 	export AHEAD_MINBFW_MIN="1"
 	export AHEAD_MINBFW_MAX="3"
 	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
 
-	# WARNING: If you want to change the following, make sure to change the respective accurrences throughout this project, e.g. in the CMakeLists.txt files
+	# WARNING: If you want to change the following, make sure to change the respective occurrences throughout this project, e.g. in the CMakeLists.txt files
 	export AHEAD_RESTINY32_SUFFIX="_restiny32"
 
 	export AHEAD_PAPER_PATH="${SOURCE_DIR}/paper"
@@ -69,17 +79,19 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		echo "$@"
 		exit $ret
 	}
+	export -f AHEAD_exit
 
 	######################################################
 	# When SYNCing file in a VM, we get nasty problems,  #
 	# so we add some SLEEPing when inside a VM. This     #
 	# fixed the issue for us.                            #
+	# All arguments are passed to 'sync'                 #
 	######################################################
 	AHEAD_sync () {
 		if ((AHEAD_IS_VM == 1)); then
-			echo -n "   * SYNCing files (VM mode)..." && sleep 2 && sync && sleep 2 && echo " Done."
+			echo -n "   * SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
 		else
-			echo -n "   * SYNCing files..." && sync && echo " Done."
+			echo -n "   * SYNCing files..." && sync "$@" && echo " Done."
 		fi
 	}
 	export -f AHEAD_sync
@@ -142,6 +154,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		fi
 	}
 	export -f AHEAD_prepare_scalinggovernor_and_turboboost
-else
-	echo "common.conf already sourced!"
+elif [[ ! -z ${VERBOSE+x} ]]; then
+	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Already sourced '${SOURCE_DIR}/common.conf'!"
 fi
