--- a/eval/run.conf
+++ b/eval/run.conf
@@ -3,16 +3,16 @@
 
 if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	export AHEAD_EVAL_RUN_CONF=""
+	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Sourcing '${SOURCE_DIR}/run.conf'"
+	[[ -z ${AHEAD_COMMON_CONF+x} ]] && { source "${SOURCE_DIR}/../common.conf" || quit "Could not source file \"common.conf\""; }
 
 	quit () {
 		echo $0 >&2
 		exit 1
 	}
 
-	SOURCE_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	source "${SOURCE_PATH}/../common.conf" || quit "Could not source file \"common.conf\""
-
-	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(cd "${SOURCE_PATH}/.." >/dev/null && pwd )"
+	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(cd "${SOURCE_DIR}/.." >/dev/null && pwd )"
 	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${AHEAD_BUILD_RELEASE_DIR}"
 	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${AHEAD_DB_PATH}"
 	[[ -z ${PATH_EVAL+x} ]] && export PATH_EVAL="${PATH_BASE}/eval"
@@ -24,10 +24,10 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	[[ -z ${EXEC_BASH+x} ]] && export EXEC_BASH="$(which bash)"
 
 	# ATTENTION !!! If you change the following names, then you MUST change the file names in "/paper/06-end2end-eval.tex" as well !!!
-	[[ -z ${PATH_SCLAR_VS_VECTOR_BASENAME+x} ]] && export PATH_SCLAR_VS_VECTOR_BASENAME="scalarVSvector"
-	[[ -z ${PATH_SCLAR_VS_VECTOR_GNUPLOTFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.m"
-	[[ -z ${PATH_SCLAR_VS_VECTOR_DATAFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.data"
-	[[ -z ${PATH_SCLAR_VS_VECTOR_PLOTFILE+x} ]] && export PATH_SCLAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCLAR_VS_VECTOR_BASENAME}.tex"
+	[[ -z ${PATH_SCALAR_VS_VECTOR_BASENAME+x} ]] && export PATH_SCALAR_VS_VECTOR_BASENAME="scalarVSvector"
+	[[ -z ${PATH_SCALAR_VS_VECTOR_GNUPLOTFILE+x} ]] && export PATH_SCALAR_VS_VECTOR_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_SCALAR_VS_VECTOR_BASENAME}.m"
+	[[ -z ${PATH_SCALAR_VS_VECTOR_DATAFILE+x} ]] && export PATH_SCALAR_VS_VECTOR_DATAFILE="${PATH_EVALREPORT}/${PATH_SCALAR_VS_VECTOR_BASENAME}.data"
+	[[ -z ${PATH_SCALAR_VS_VECTOR_PLOTFILE+x} ]] && export PATH_SCALAR_VS_VECTOR_PLOTFILE="${PATH_EVALREPORT}/${PATH_SCALAR_VS_VECTOR_BASENAME}.tex"
 
 	# ATTENTION !!! If you change the following names, then you MUST change the file names in "/paper/01-introduction.tex" as well !!!
 	[[ -z ${PATH_TEASER_RUNTIME_BASENAME+x} ]] && export PATH_TEASER_RUNTIME_BASENAME="teaser_runtime"
@@ -41,4 +41,7 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	[[ -z ${PATH_TEASER_LEGEND_BASENAME+x} ]] && export PATH_TEASER_LEGEND_BASENAME="teaser_legend"
 	[[ -z ${PATH_TEASER_LEGEND_GNUPLOTFILE+x} ]] && export PATH_TEASER_LEGEND_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.m"
 	[[ -z ${PATH_TEASER_LEGEND_PLOTFILE+x} ]] && export PATH_TEASER_LEGEND_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.tex"
+elif [[ ! -z ${VERBOSE+x} ]]; then
+	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Already sourced '${SOURCE_DIR}/run.conf'!"
 fi
