Fix some errors (teasers, modular inverse graphs) Add some pretty printing (esp. indentation) to better see what's going on (use "VERBOSE=1 <script>")
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -1,9 +1,55 @@
 # this config file contains some common settings for the AHEAD benchmarking, used by several scripts
 
 if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
+
+	######################################################
+	# Function to print something and exit.              #
+	# Expects the return code as FIRST argument!         #
+	######################################################
+	AHEAD_exit () {
+		ret=$1
+		shift
+		echo "$@"
+		exit $ret
+	}
+	export -f AHEAD_exit
+
+	######################################################
+	# Pretty printing.                                   #
+	######################################################
+	export AHEAD_SCRIPT_COMMAND_DEPTH=
+	export AHEAD_SCRIPT_COMMAND_PREFIX=
+	AHEAD_sub_begin () {
+		((++AHEAD_SCRIPT_COMMAND_DEPTH))
+		local line
+		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
+		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+	}
+	export -f AHEAD_sub_begin
+	AHEAD_sub_end () {
+		((AHEAD_SCRIPT_COMMAND_DEPTH <= 0)) && AHEAD_exit 1 "${AHEAD_SCRIPT_COMMAND_PREFIX}Bash script 'AHEAD_sub_end' called too often!"
+		((--AHEAD_SCRIPT_COMMAND_DEPTH))
+		local line
+		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
+		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+	}
+	export -f AHEAD_sub_end
+	AHEAD_sub_reset () {
+		((AHEAD_SCRIPT_COMMAND_DEPTH = 0))
+		local line
+		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
+		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+	}
+	export -f AHEAD_sub_reset
+	# "Initialize" pretty printing
+	AHEAD_sub_reset
+
 	export AHEAD_COMMON_CONF=""
 	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "Sourcing '${SOURCE_DIR}/common.conf'"
+	echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Sourcing '${SOURCE_DIR}/common.conf'"
 
 	######################################################
 	# The following are settings for the modular inverse #
@@ -13,6 +59,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	# The following are settings for executing AHEAD     #
 	######################################################
+	AHEAD_sub_begin
 	[[ -z ${AHEAD_DATE+x} ]] && export AHEAD_DATE="$(date '+%Y-%m-%d_%H-%M')"
 	if which systemd-detect-virt &>/dev/null ; then
 		systemd-detect-virt &>/dev/null && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
@@ -22,14 +69,14 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		# fallback variant -- just assume VM...
 		AHEAD_IS_VM=1
 	fi
-	((AHEAD_IS_VM == 1)) && echo " * detected VM"
+	((AHEAD_IS_VM == 1)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}detected VM"
 	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR}/date.prev"
 	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
 	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
-	export AHEAD_SCALEFACTOR_MAX="1"
+	export AHEAD_SCALEFACTOR_MAX="3"
 
 	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
@@ -70,16 +117,22 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR}/scalinggovernor.sh"
 
 	######################################################
-	# Function to print something and exit.              #
-	# Expects the return code as FIRST argument!         #
+	# Function to encapsulate pushd verbosity.           #
 	######################################################
-	AHEAD_exit () {
-		ret=$1
-		shift
-		echo "$@"
-		exit $ret
+	AHEAD_pushd () {
+		(($# != 1)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_pushd' called with ${#@} arguments, but exactly 1 expected (the pushd target)!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}pushd: "; pushd "$1"; } || pushd "$1" &>/dev/null
 	}
-	export -f AHEAD_exit
+	export -f AHEAD_pushd
+
+	######################################################
+	# Function to encapsulate popd verbosity.            #
+	######################################################
+	AHEAD_popd () {
+		(($# != 0)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_popd' called with ${#@} arguments, but exactly 0 expected!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}popd: "; popd; } || popd &>/dev/null
+	}
+	export -f AHEAD_popd
 
 	######################################################
 	# When SYNCing file in a VM, we get nasty problems,  #
@@ -89,9 +142,10 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	AHEAD_sync () {
 		if ((AHEAD_IS_VM == 1)); then
-			echo -n "   * SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
+			echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
 		else
-			echo -n "   * SYNCing files..." && sync "$@" && echo " Done."
+			# Unfortunately, it seems that we must force some wait time even in non-VM mode!
+			echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}SYNCing files..." && sleep 1 && sync "$@" && echo " Done."
 		fi
 	}
 	export -f AHEAD_sync
@@ -104,7 +158,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# with an "echo Error" or "echo Done".               #
 	######################################################
 	AHEAD_run_hidden_output () {
-		(($# == 0)) && echo " Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
+		(($# == 0)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
 		t=$(tempfile) || exit 1
 		trap "echo ' Error!'; cat '$t'; rm -f -- '$t'" EXIT
 		CMD="$1"
@@ -154,7 +208,9 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		fi
 	}
 	export -f AHEAD_prepare_scalinggovernor_and_turboboost
+
+	AHEAD_sub_end
 elif [[ ! -z ${VERBOSE+x} ]]; then
 	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "Already sourced '${SOURCE_DIR}/common.conf'!"
+	echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Already sourced '${SOURCE_DIR}/common.conf'!"
 fi
