--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ paper/results/ssb/intermediate
 /paper/results/ssb/teaser_runtime.pdf
 /paper/results/ssb/teaser_runtime.tex
 /date.prev
+/paper/results/ssb/scalarVSvector.data
+/paper/results/ssb/scalarVSvector.m
+/paper/results/ssb/scalarVSvector.pdf
+/paper/results/ssb/scalarVSvector.tex
