--- a/eval/run.conf
+++ b/eval/run.conf
@@ -3,16 +3,11 @@
 
 if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	export AHEAD_EVAL_RUN_CONF=""
-	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "Sourcing '${SOURCE_DIR}/run.conf'"
-	[[ -z ${AHEAD_COMMON_CONF+x} ]] && { source "${SOURCE_DIR}/../common.conf" || quit "Could not source file \"common.conf\""; }
+	SOURCE_DIR_RUN="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Sourcing '${SOURCE_DIR_RUN}/run.conf'"
+	[[ -z ${AHEAD_COMMON_CONF+x} ]] && { source "${SOURCE_DIR_RUN}/../common.conf" || { echo "Could not source file \"${SOURCE_DIR_RUN}/../common.conf\""; exit 1; }; }
 
-	quit () {
-		echo $0 >&2
-		exit 1
-	}
-
-	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(cd "${SOURCE_DIR}/.." >/dev/null && pwd )"
+	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(cd "${SOURCE_DIR_RUN}/.." >/dev/null && pwd )"
 	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${AHEAD_BUILD_RELEASE_DIR}"
 	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${AHEAD_DB_PATH}"
 	[[ -z ${PATH_EVAL+x} ]] && export PATH_EVAL="${PATH_BASE}/eval"
@@ -41,7 +36,34 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	[[ -z ${PATH_TEASER_LEGEND_BASENAME+x} ]] && export PATH_TEASER_LEGEND_BASENAME="teaser_legend"
 	[[ -z ${PATH_TEASER_LEGEND_GNUPLOTFILE+x} ]] && export PATH_TEASER_LEGEND_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.m"
 	[[ -z ${PATH_TEASER_LEGEND_PLOTFILE+x} ]] && export PATH_TEASER_LEGEND_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.tex"
+
+	[[ -z "${AHEAD_CXX_COMPILER+x}" ]] && export AHEAD_CXX_COMPILER="c++"
+	[[ -z "${AHEAD_GXX_COMPILER+x}" ]] && export AHEAD_GXX_COMPILER="g++"
+	[[ -z "${AHEAD_EXECUTABLE_BASE+x}" ]] && export AHEAD_EXECUTABLE_BASE="ssbm-q"
+	[[ -z "${AHEAD_BASEREPLACE1+x}" ]] && export AHEAD_BASEREPLACE1="s/${AHEAD_EXECUTABLE_BASE}\([0-9]\)\([0-9]\)/Q\1.\2/g"
+	[[ -z "${AHEAD_BASEREPLACE2+x}" ]] && export AHEAD_BASEREPLACE2="s/[_]\([^[:space:]]\)[^[:space:]]*/^\{\1\}/g"
+
+	# Exporting arrays does not work out of the box, so we need some trickery here.
+	[[ -z "${AHEAD_IMPLEMENTED+x}" ]] && export AHEAD_IMPLEMENTED="(11 12 13)" #"(11 12 13 21 22 23 31 32 33 34 41 42 43)"
+	# ATTENTION !!! When you change the following, then you MUST adapt variable TEASER_INDICES, too !!!
+	export AHEAD_VARIANTS="('_normal' '_dmr_seq' '_early' '_late' '_continuous' '_continuous_reenc')"
+	export AHEAD_VARIANT_NAMES="('Unprotected' 'DMR' 'Early' 'Late' 'Continuous' 'Reencoding')"
+	export AHEAD_ARCHITECTURES="('_scalar'"
+	export AHEAD_ARCHITECTURE_NAMES="('Scalar'"
+	cat /proc/cpuinfo | grep sse4_2 &>/dev/null
+	HAS_SSE42=$?
+	if [[ ${HAS_SSE42} -eq 0 ]]; then
+		AHEAD_ARCHITECTURES="${AHEAD_ARCHITECTURES} '_SSE'"
+		AHEAD_ARCHITECTURE_NAMES="${AHEAD_ARCHITECTURE_NAMES} 'SSE4.2'"
+	fi
+	export AHEAD_ARCHITECTURES="${AHEAD_ARCHITECTURES})"
+	export AHEAD_ARCHITECTURE_NAMES="${AHEAD_ARCHITECTURE_NAMES})"
+	export AHEAD_TEASER_INDICES="(0 1 4)"
+
+	[[ -z ${AHEAD_BENCHMARK_NUMRUNS+x} ]] && export AHEAD_BENCHMARK_NUMRUNS=10 # like above
+	#[[ -z ${AHEAD_BENCHMARK_NUMBEST+x} ]] && export AHEAD_BENCHMARK_NUMBEST=$(($AHEAD_BENCHMARK_NUMRUNS > 10 ? 10 : $AHEAD_BENCHMARK_NUMRUNS))
+	[[ -z ${AHEAD_BENCHMARK_NUMBEST+x} ]] && export AHEAD_BENCHMARK_NUMBEST=$AHEAD_BENCHMARK_NUMRUNS
 elif [[ ! -z ${VERBOSE+x} ]]; then
-	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "Already sourced '${SOURCE_DIR}/run.conf'!"
+	SOURCE_DIR_RUN="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "Already sourced '${SOURCE_DIR_RUN}/run.conf'!"
 fi
