--- a/common.conf
+++ b/common.conf
@@ -18,38 +18,45 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# Pretty printing.                                   #
 	######################################################
 	export AHEAD_SCRIPT_COMMAND_DEPTH=
-	export AHEAD_SCRIPT_COMMAND_PREFIX=
+	export AHEAD_SCRIPT_ECHO_INDENT=
+
 	AHEAD_sub_begin () {
 		((++AHEAD_SCRIPT_COMMAND_DEPTH))
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
-		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		return 0
 	}
 	export -f AHEAD_sub_begin
+
 	AHEAD_sub_end () {
-		((AHEAD_SCRIPT_COMMAND_DEPTH <= 0)) && AHEAD_exit 1 "${AHEAD_SCRIPT_COMMAND_PREFIX}Bash script 'AHEAD_sub_end' called too often!"
+		((AHEAD_SCRIPT_COMMAND_DEPTH <= 0)) && AHEAD_exit 1 "${AHEAD_SCRIPT_ECHO_INDENT}Bash script 'AHEAD_sub_end' called too often!"
 		((--AHEAD_SCRIPT_COMMAND_DEPTH))
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
-		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		return 0
 	}
 	export -f AHEAD_sub_end
+
 	AHEAD_sub_reset () {
 		((AHEAD_SCRIPT_COMMAND_DEPTH = 0))
 		local line
 		printf -v line '%*s' "$(( AHEAD_SCRIPT_COMMAND_DEPTH * 2 ))"
-		export AHEAD_SCRIPT_COMMAND_PREFIX=" ${line// / }* "
-		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_COMMAND_PREFIX}'"
+		export AHEAD_SCRIPT_ECHO_INDENT=" ${line// / }* "
+		[[ ! -z ${MOREVERBOSE+x} ]] && echo "${AHEAD_SCRIPT_ECHO_INDENT}Depth=${AHEAD_SCRIPT_COMMAND_DEPTH}. Prefix='${AHEAD_SCRIPT_ECHO_INDENT}'"
+		return 0
 	}
 	export -f AHEAD_sub_reset
-	# "Initialize" pretty printing
+
+	### "Initialize" pretty printing
 	AHEAD_sub_reset
 
 	export AHEAD_COMMON_CONF=""
-	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Sourcing '${SOURCE_DIR}/common.conf'"
+	SOURCE_DIR_COMMON="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "${AHEAD_SCRIPT_ECHO_INDENT}Sourcing '${SOURCE_DIR_COMMON}/common.conf'"
 
 	######################################################
 	# The following are settings for the modular inverse #
@@ -69,16 +76,16 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 		# fallback variant -- just assume VM...
 		AHEAD_IS_VM=1
 	fi
-	((AHEAD_IS_VM == 1)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}detected VM"
-	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR}/date.prev"
+	((AHEAD_IS_VM == 1)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}detected VM"
+	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR_COMMON}/date.prev"
 	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
-	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
+	export AHEAD_DB_PATH="${SOURCE_DIR_COMMON}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
-	export AHEAD_SCALEFACTOR_MAX="3"
+	export AHEAD_SCALEFACTOR_MAX="1"
 
-	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR}/build"
+	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR_COMMON}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
 	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
 
@@ -97,7 +104,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# WARNING: If you want to change the following, make sure to change the respective occurrences throughout this project, e.g. in the CMakeLists.txt files
 	export AHEAD_RESTINY32_SUFFIX="_restiny32"
 
-	export AHEAD_PAPER_PATH="${SOURCE_DIR}/paper"
+	export AHEAD_PAPER_PATH="${SOURCE_DIR_COMMON}/paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
 	export AHEAD_PAPER_RESULTS_MB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
@@ -106,22 +113,22 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	# The following are the names of the scripts to call #
 	######################################################
-	export AHEAD_SCRIPT_BOOTSTRAP="${SOURCE_DIR}/build_bootstrap.sh"
-	export AHEAD_SCRIPT_BLDSRC="${SOURCE_DIR}/build_sources.sh"
-	export AHEAD_SCRIPT_GENSSB="${SOURCE_DIR}/generate_ssbdata.sh"
+	export AHEAD_SCRIPT_BOOTSTRAP="${SOURCE_DIR_COMMON}/build_bootstrap.sh"
+	export AHEAD_SCRIPT_BLDSRC="${SOURCE_DIR_COMMON}/build_sources.sh"
+	export AHEAD_SCRIPT_GENSSB="${SOURCE_DIR_COMMON}/generate_ssbdata.sh"
 	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="ssbm-dbsize_scalar"
 	export AHEAD_SCRIPT_GENSSB_EXECUTABLE_PATH="${AHEAD_BUILD_RELEASE_DIR}/${AHEAD_SCRIPT_GENSSB_EXECUTABLE}"
-	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR}/coding_benchmark.sh"
-	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR}/modular_inverse.sh"
-	export AHEAD_SCRIPT_TURBOBOOST="${SOURCE_DIR}/turboboost.sh"
-	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR}/scalinggovernor.sh"
+	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR_COMMON}/coding_benchmark.sh"
+	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR_COMMON}/modular_inverse.sh"
+	export AHEAD_SCRIPT_TURBOBOOST="${SOURCE_DIR_COMMON}/turboboost.sh"
+	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR_COMMON}/scalinggovernor.sh"
 
 	######################################################
 	# Function to encapsulate pushd verbosity.           #
 	######################################################
 	AHEAD_pushd () {
-		(($# != 1)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_pushd' called with ${#@} arguments, but exactly 1 expected (the pushd target)!" && exit 1
-		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}pushd: "; pushd "$1"; } || pushd "$1" &>/dev/null
+		(($# != 1)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_pushd' called with ${#@} arguments, but exactly 1 expected (the pushd target)!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_ECHO_INDENT}pushd: "; pushd "$1"; } || pushd "$1" &>/dev/null
 	}
 	export -f AHEAD_pushd
 
@@ -129,8 +136,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# Function to encapsulate popd verbosity.            #
 	######################################################
 	AHEAD_popd () {
-		(($# != 0)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_popd' called with ${#@} arguments, but exactly 0 expected!" && exit 1
-		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}popd: "; popd; } || popd &>/dev/null
+		(($# != 0)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_popd' called with ${#@} arguments, but exactly 0 expected!" && exit 1
+		[[ ! -z ${VERBOSE+x} ]] && { echo -n "${AHEAD_SCRIPT_ECHO_INDENT}popd: "; popd; } || popd &>/dev/null
 	}
 	export -f AHEAD_popd
 
@@ -142,10 +149,10 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	AHEAD_sync () {
 		if ((AHEAD_IS_VM == 1)); then
-			echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
+			echo -n "${AHEAD_SCRIPT_ECHO_INDENT}SYNCing files (VM mode)..." && sleep 2 && sync "$@" && sleep 2 && echo " Done."
 		else
 			# Unfortunately, it seems that we must force some wait time even in non-VM mode!
-			echo -n "${AHEAD_SCRIPT_COMMAND_PREFIX}SYNCing files..." && sleep 1 && sync "$@" && echo " Done."
+			echo -n "${AHEAD_SCRIPT_ECHO_INDENT}SYNCing files..." && sleep 1 && sync "$@" && echo " Done."
 		fi
 	}
 	export -f AHEAD_sync
@@ -158,13 +165,18 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	# with an "echo Error" or "echo Done".               #
 	######################################################
 	AHEAD_run_hidden_output () {
-		(($# == 0)) && echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
+		(($# == 0)) && echo "${AHEAD_SCRIPT_ECHO_INDENT}Error! bash function 'AHEAD_run_hidden_output' called with 0 arguments, but at least 1 expected (the target script or executable)!" && exit 1
 		t=$(tempfile) || exit 1
 		trap "echo ' Error!'; cat '$t'; rm -f -- '$t'" EXIT
 		CMD="$1"
 		shift
-		"${CMD}" "$@" &>"$t"
-		ret=$?
+		if [[ -z "${VERBOSE+x}" ]] || ((VERBOSE == 0)); then 
+			"${CMD}" "$@" &>"$t"
+			ret=$?
+		else
+			"${CMD}" "$@" > >(tee -a "$t") 2> >(tee -a "$t" >&2)
+			ret=$?
+		fi
 		if ((ret==0)); then
 			echo " Done."
 		else
@@ -211,6 +223,6 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 
 	AHEAD_sub_end
 elif [[ ! -z ${VERBOSE+x} ]]; then
-	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
-	echo "${AHEAD_SCRIPT_COMMAND_PREFIX}Already sourced '${SOURCE_DIR}/common.conf'!"
+	SOURCE_DIR_COMMON="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	echo "${AHEAD_SCRIPT_ECHO_INDENT}Already sourced '${SOURCE_DIR_COMMON}/common.conf'!"
 fi
